style.css
html{
    scroll-behavior: smooth;
}

body {
    background-color: 	#edece7;
}

/* -------Sidebar------- */

#container {
    position: fixed;
    top: 0px;
    left: 0;
    z-index: 999;
    width: 25%;
    height: 100vh;
}

.aboutMe {
    background-color: #e4e4e4;
    padding-top: 1em;
    height: 100%;
    margin-right: .5em;
    border-right: 1px;
    border-top: 0px;
    border-bottom:0px;
    border-left:0px;
    border-style: solid;
    border-color: #cecdcd;
    overflow-x: hidden; 
    overflow-y: auto; 
}
.picSpace {
    display: block;
    margin-right: auto;
    margin-left: auto;
    width: 50%;
}

.pic {

    border-radius: 50%;
    width: 125px;
    height: auto;
}

.aboutHead{
    text-align: center;
}

.social {
    display: inline;
    text-align: center;
    padding-left: 24%;
}

.logo {
    color: lightgray;
    margin-right: 5px;
    padding: 1px;
    font-size: 14px;
}

/* --------- Main Content ---------- */

.smHead {
    padding-top: 1em;
    text-align: center;
}

.contentHeader{
    padding-top: 1em;
}

.content {
    top: 50px;
}

#right {
    float: right;
}

.elder-child {
    float: left;
}

.younger-child {
    float: right;
    /* margin-right: 15%; */
}

.red-headed-step-child {
    float: left;
}

.to_top {
    height: 50px;
    width: 120px;
    position: fixed;
    right: 30px;
    bottom: 30px;
    padding-top: 10px;
    color: #edece7;
    text-align: center;
}

/* ------- Top Bar and Colors --------- */

.smPic {
    position: fixed;
    top: 5px;
    left: 3%;
    width: 95px;
    height: auto;
    border-radius: 50%;
}

.RSrectangle {
    position: fixed;
    width: 100%;
    height: 175px;
    top: -70px;
    /* background-color: #edece7; */
    border-bottom: grey;
    border-width: 1px;
    border-style: solid;
    background: linear-gradient(to bottom left, 
    #e49e00 28%, #947a7a 28%,#ae6842 28.5%, #ae6842 36%, #555555 36%, #801615 36.5%, #801615 44%,#333333 44%,  #3b3b3b 44.5%, #3b3b3b 52%, #333333 52% , #edece7 52.5% ); 
}
.SGrectangle {
    position: fixed;
    width: 100%;
    height: 175px;
    top: -70px;
    /* background-color: #edece7; */
    border-bottom: grey;
    border-width: 1px;
    border-style: solid;
    background: linear-gradient(to bottom left, 
    #CAE0D2 28%,#878787 28%, #ad9968 28.5%, #ad9968 36%,#878787 36%, #f7c5b7 36.5%, #f7c5b7 44%, #878787 44%,  #49607f 44.5%, #49607f 52%, #878787 52% , #edece7 52.5% ); 
}
.VBrectangle {
    position: fixed;
    width: 100%;
    height: 175px;
    top: -70px;
    /* background-color: #edece7; */
    border-bottom: grey;
    border-width: 1px;
    border-style: solid;
    background: linear-gradient(to bottom left, 
    #e49e00 28%, #ae6842 28%, #ae6842 36%, #801615 36%, #801615 44%, #3b3b3b 44%, #3b3b3b 52%,  #edece7 52% ); 
}

.headText {
    position: fixed;
    top: 35px;
    left:27%;
}

.sgLogo {
    position: fixed;
    height: 75px;
    width: auto;
    top: 25px;
    left:27%
}

.vbLogo {
    position: fixed;
    height: 40px;
    width: auto;
    top: 55px;
    left: 345px;
}

